force-app/main/default/objects/Holder_Lookup_Detail__c/Holder_Lookup_Detail__c.object-meta.xml
<CustomObject>
    <label>Holder Lookup Detail</label>
    <nameField>
        <displayFormat>HLD# {0000000}</displayFormat>
        <label>Holder Lookup Detail#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Holder Lookup Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>