force-app/main/default/objects/Holder_Lookup_Detail__c/fields/Holder_Lookup_Translation__c.field-meta.xml
<CustomField>
    <fullName>Holder_Lookup_Translation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holder Lookup Translation</label>
    <referenceTo>Holder_Lookup_Translation__c</referenceTo>
    <relationshipLabel>Holder Lookup Details</relationshipLabel>
    <relationshipName>Holder_Lookup_Details</relationshipName>
    <type>Lookup</type>
</CustomField>