force-app/main/default/objects/Holder_Lookup_Detail__c/fields/Text1val__c.field-meta.xml
<CustomField>
    <fullName>Text1val__c</fullName>
    <label>Text1val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>