force-app/main/default/objects/Holder_Lookup_Detail__c/fields/Text2val__c.field-meta.xml
<CustomField>
    <fullName>Text2val__c</fullName>
    <label>Text2val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>