force-app/main/default/objects/Holder_Lookup_Detail__c/fields/Text3val__c.field-meta.xml
<CustomField>
    <fullName>Text3val__c</fullName>
    <label>Text3val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>