force-app/main/default/objects/Holder_Lookup_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attribute__c</columns>
    <columns>Text1val__c</columns>
    <columns>Text2val__c</columns>
    <columns>Text3val__c</columns>
    <columns>Text4val__c</columns>
    <columns>Text5val__c</columns>
    <columns>Text__c</columns>
    <columns>Value__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CDC_Ext_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>